--- a/mail/pom.xml
+++ b/mail/pom.xml
@@ -96,6 +96,19 @@
       <version>${jackson.version}</version>
     </dependency>
 
+    <!--邮件依赖包-->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.7</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+
     <!--帮助包-->
     <dependency>
       <groupId>org.apache.commons</groupId>
