--- a/mail/pom.xml
+++ b/mail/pom.xml
@@ -109,6 +109,13 @@
     </dependency>
 
 
+    <!--velocity 模板解析依赖-->
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
+
     <!--帮助包-->
     <dependency>
       <groupId>org.apache.commons</groupId>
